(MAJOR) feat: friends system early implementation
