# server/api/Services/Interfaces/IUserService.cs
@@ -6,4 +6,7 @@ using efscaffold;
 public interface IUserService
 {
     Task<User> CreateUserAsync(CreateUserDto userDto);
+    Task<List<User>> GetAllFriendsForUser(string userId);
+    Task AddFriendForUser(string userId, string friendId);
+    Task RemoveFriendForUser(string userId, string friendId);
 }
