# server/efscaffold/Entities/UsersUser.cs
@@ -1,0 +1,11 @@
+﻿using System;
+using System.Collections.Generic;
+
+namespace efscaffold;
+
+public partial class UsersUser
+{
+    public string UserId { get; set; } = null!;
+
+    public string FriendId { get; set; } = null!;
+}
